--- a/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
+++ b/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "guided_prompt = PromptTemplate(\n",
-    "        instruction=\"Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response. The response should be raw text not in markdown\",\n",
+    "        instruction=\"Generate one question and its corresponding answer based on context.\",\n",
     "        few_shot_prompt=[\n",
     "            Context(\n",
     "                context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
@@ -205,13 +205,19 @@
      "output_type": "stream",
      "text": [
       "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
-      "Loading checkpoint shards:  50%|█████     | 2/4 [00:03<00:03,  1.59s/it]"
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.31s/it]\n"
      ]
     }
    ],
    "source": [
     "config = GemmaTransformConfig(\n",
     "    prompt_template=guided_prompt,\n",
+    "    model_config=HuggingfaceModelConfig(\n",
+    "        batch_size=64,\n",
+    "        response_start_key=\"question\", \n",
+    "        model_name=\"google/gemma-7b-it\",\n",
+    "        # response_format={\"type\": \"json_object\"},\n",
+    "    )\n",
     ")\n",
     "\n",
     "client = TransformClient(config)"
@@ -219,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1d61f058-3ba6-4463-b942-306a2f983b88",
    "metadata": {},
    "outputs": [
@@ -232,7 +238,7 @@
       "                     model_config=HuggingfaceModelConfig(model_name='google/gemma-7b-it',\n",
       "                                                         model_server='HuggingfaceModelServer',\n",
       "                                                         token='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',\n",
-      "                                                         batch_size=1,\n",
+      "                                                         batch_size=64,\n",
       "                                                         neuron=False,\n",
       "                                                         load_in_4bit=False,\n",
       "                                                         load_in_8bit=True,\n",
@@ -242,13 +248,13 @@
       "                                                         num_beams=1,\n",
       "                                                         num_return_sequences=1,\n",
       "                                                         repetition_penalty=1.2,\n",
-      "                                                         response_start_key=None,\n",
+      "                                                         response_start_key='question',\n",
       "                                                         response_format={'type': 'text'}),\n",
       "                     num_thread=1,\n",
-      "                     prompt_template=PromptTemplate(instruction='Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response.', few_shot_prompt=[Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.', question='Who published A Mathematical Theory of Communication in 1948?', answer='Claude E. Shannon.')]),\n",
+      "                     prompt_template=PromptTemplate(instruction='Generate one question and its corresponding answer based on context.', few_shot_prompt=[Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.', question='Who published A Mathematical Theory of Communication in 1948?', answer='Claude E. Shannon.')]),\n",
       "                     auto_split_long_text=False)\n",
       "\n",
-      "Prompt:  Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response.\n"
+      "Prompt:  Generate one question and its corresponding answer based on context.\n"
      ]
     }
    ],
@@ -270,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cdc5d5bf-17c6-4d07-b90b-5e4525b1f219",
    "metadata": {},
    "outputs": [
@@ -278,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['instruction: Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncontext: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.']\n"
+      "['instruction: Generate one question and its corresponding answer based on context.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncontext: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.']\n"
      ]
     },
     {
@@ -293,7 +299,7 @@
      "output_type": "stream",
      "text": [
       "Prompt to the model: <bos><start_of_turn>user\n",
-      "instruction: Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response.\n",
+      "instruction: Generate one question and its corresponding answer based on context.\n",
       "context: In 1948, Claude E. Shannon published A Mathematical Theory of\n",
       "Communication (Shannon, 1948) establishing the theory of\n",
       "information. In his article, Shannon introduced the concept of\n",
@@ -301,6 +307,8 @@
       "question: Who published A Mathematical Theory of Communication in 1948?\n",
       "answer: Claude E. Shannon.\n",
       "current context: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.<end_of_turn>\n",
+      "question:\n",
+      "\n",
       "<start_of_turn>model\n",
       "\n"
      ]
@@ -317,14 +325,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:20<00:00, 20.95s/it]"
+      "100%|██████████| 1/1 [00:11<00:00, 11.79s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response to the model: {'generated_text': \"<bos><start_of_turn>user\\ninstruction: Generate one question and its corresponding answer based on context. Following the format and structure of the examples below to include the same context, question, and answer in the response.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncurrent context: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.<end_of_turn>\\n<start_of_turn>model\\n**Question:** What does current text suggest about protection IP Rights\\n\\n **Answer**: The providedtext suggests  that company's successful depend heavily their capabilites across various domains like designing,researching & developing products along with manufacturing&marketing strategies. Additionally it highlights how they safeguard these abilities through Intellectual Property(IP )Rights which includes trademarkes,,utility/design Patents,,,copyrights,&trade Secrets amongst other protections measures implemented both domestically US And internationally within selected nations..\"}\n"
+      "Response to the model: {'generated_text': \"<bos><start_of_turn>user\\ninstruction: Generate one question and its corresponding answer based on context.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncurrent context: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.<end_of_turn>\\nquestion:\\n\\n<start_of_turn>model\\n**Question:** What does current text discuss about Intellectual Property Rights related with company's achievements  and protection strategies?\\n\\n\\n **Answer**: The providedtext discusses how Company protects it IP assets through various measures like trademark registration,patent applications & enforcement actions.\"}\n"
      ]
     },
     {
@@ -343,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d7fb9996-d5ef-4bfa-bd91-6a01bce765a7",
    "metadata": {},
    "outputs": [
@@ -351,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  20.951124906539917  seconds\n"
+      "execution time:  11.796713590621948  seconds\n"
      ]
     }
    ],
@@ -371,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bee02e62-433c-4cc6-b882-900d9e88d881",
    "metadata": {},
    "outputs": [
@@ -381,8 +389,7 @@
      "text": [
       "Sample output:\n",
       "('instruction: Generate one question and its corresponding answer based on '\n",
-      " 'context. Following the format and structure of the examples below to include '\n",
-      " 'the same context, question, and answer in the response.\\n'\n",
+      " 'context.\\n'\n",
       " 'context: In 1948, Claude E. Shannon published A Mathematical Theory of\\n'\n",
       " 'Communication (Shannon, 1948) establishing the theory of\\n'\n",
       " 'information. In his article, Shannon introduced the concept of\\n'\n",
@@ -399,17 +406,16 @@
       " 'valuable. W e also continue to vigorously protect our intellectual property, '\n",
       " 'including trademarks, patents and trade secrets against third-party '\n",
       " 'infringement and misappropriation.\\n'\n",
+      " 'question:\\n'\n",
       " '\\n'\n",
-      " '**Question:** What does current text suggest about protection IP Rights\\n'\n",
       " '\\n'\n",
-      " \" **Answer**: The providedtext suggests  that company's successful depend \"\n",
-      " 'heavily their capabilites across various domains like designing,researching '\n",
-      " '& developing products along with manufacturing&marketing strategies. '\n",
-      " 'Additionally it highlights how they safeguard these abilities through '\n",
-      " 'Intellectual Property(IP )Rights which includes trademarkes,,utility/design '\n",
-      " 'Patents,,,copyrights,&trade Secrets amongst other protections measures '\n",
-      " 'implemented both domestically US And internationally within selected '\n",
-      " 'nations..')\n"
+      " '**Question:** What does current text discuss about Intellectual Property '\n",
+      " \"Rights related with company's achievements  and protection strategies?\\n\"\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " ' **Answer**: The providedtext discusses how Company protects it IP assets '\n",
+      " 'through various measures like trademark registration,patent applications & '\n",
+      " 'enforcement actions.')\n"
      ]
     }
    ],
@@ -418,70 +424,6 @@
     "pprint(outputs[0]['output'][0]['response'][0])\n",
     "\n",
     "text = outputs[0]['output'][0]['response'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97ec1b9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "instruction: Generate one question and its corresponding answer based on context.\n",
-       "Following the format and structure of the examples below to include the same context,\n",
-       "question, and answer in the response.\n",
-       "context: In 1948, Claude E. Shannon published A Mathematical Theory of\n",
-       "Communication (Shannon, 1948) establishing the theory of\n",
-       "information. In his article, Shannon introduced the concept of\n",
-       "information entropy for the first time. We will begin our journey here.\n",
-       "question: Who published A Mathematical Theory of Communication in 1948?\n",
-       "answer: Claude E. Shannon.\n",
-       "current context: We believe our success depends upon our capabilities in areas such as\n",
-       "design, research and development, production and marketing and is supported and protected\n",
-       "by our intellectual property rights, such as trademarks, utility and design patents,\n",
-       "copyrights, and trade secrets, among others. We have followed a policy of applying for and\n",
-       "registering intellectual property rights in the United States and select foreign countries\n",
-       "on trademarks, inventions, innovations and designs that we deem valuable. W e also\n",
-       "continue to vigorously protect our intellectual property, including trademarks, patents\n",
-       "and trade secrets against third-party infringement and misappropriation.\n",
-       "\n",
-       "**Question:** What does current text suggest about protection IP Rights\n",
-       "\n",
-       " **Answer**: The providedtext suggests  that company's successful depend heavily their\n",
-       "capabilites across various domains like designing,researching & developing products along\n",
-       "with manufacturing&marketing strategies. Additionally it highlights how they safeguard\n",
-       "these abilities through Intellectual Property(IP )Rights which includes\n",
-       "trademarkes,,utility/design Patents,,,copyrights,&trade Secrets amongst other protections\n",
-       "measures implemented both domestically US And internationally within selected nations.."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import textwrap\n",
-    "from IPython.display import Markdown, display\n",
-    "\n",
-    "def wrap_text(text, width=90): #preserve_newlines\n",
-    "    # Split the input text into lines based on newline characters\n",
-    "    lines = text.split('\\n')\n",
-    "\n",
-    "    # Wrap each line individually\n",
-    "    wrapped_lines = [textwrap.fill(line, width=width) for line in lines]\n",
-    "\n",
-    "    # Join the wrapped lines back together using newline characters\n",
-    "    wrapped_text = '\\n'.join(wrapped_lines)\n",
-    "\n",
-    "    return wrapped_text\n",
-    "\n",
-    "wrapped_text = wrap_text(text)\n",
-    "display(Markdown(wrapped_text))"
    ]
   },
   {
