--- a/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
+++ b/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
@@ -204,8 +204,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "tokenizer_config.json: 100%|██████████| 2.16k/2.16k [00:00<00:00, 15.8MB/s]\n",
+      "tokenizer.model: 100%|██████████| 4.24M/4.24M [00:00<00:00, 44.7MB/s]\n",
+      "tokenizer.json: 100%|██████████| 17.5M/17.5M [00:00<00:00, 175MB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 888/888 [00:00<00:00, 7.35MB/s]\n",
+      "config.json: 100%|██████████| 694/694 [00:00<00:00, 5.44MB/s]\n",
       "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.31s/it]\n"
+      "model.safetensors.index.json: 100%|██████████| 20.9k/20.9k [00:00<00:00, 57.3MB/s]\n",
+      "model-00001-of-00004.safetensors: 100%|██████████| 5.00G/5.00G [00:23<00:00, 215MB/s]\n",
+      "model-00002-of-00004.safetensors: 100%|██████████| 4.98G/4.98G [00:22<00:00, 223MB/s]\n",
+      "model-00003-of-00004.safetensors: 100%|██████████| 4.98G/4.98G [00:33<00:00, 147MB/s]\n",
+      "model-00004-of-00004.safetensors: 100%|██████████| 2.11G/2.11G [00:15<00:00, 133MB/s]\n",
+      "Downloading shards: 100%|██████████| 4/4 [01:36<00:00, 24.10s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.28s/it]\n",
+      "generation_config.json: 100%|██████████| 137/137 [00:00<00:00, 971kB/s]\n"
      ]
     }
    ],
@@ -281,13 +293,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['instruction: Generate one question and its corresponding answer based on context.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncontext: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.']\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -295,51 +300,12 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prompt to the model: <bos><start_of_turn>user\n",
-      "instruction: Generate one question and its corresponding answer based on context.\n",
-      "context: In 1948, Claude E. Shannon published A Mathematical Theory of\n",
-      "Communication (Shannon, 1948) establishing the theory of\n",
-      "information. In his article, Shannon introduced the concept of\n",
-      "information entropy for the first time. We will begin our journey here.\n",
-      "question: Who published A Mathematical Theory of Communication in 1948?\n",
-      "answer: Claude E. Shannon.\n",
-      "current context: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.<end_of_turn>\n",
-      "question:\n",
-      "\n",
-      "<start_of_turn>model\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:492: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:11<00:00, 11.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response to the model: {'generated_text': \"<bos><start_of_turn>user\\ninstruction: Generate one question and its corresponding answer based on context.\\ncontext: In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\\nquestion: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.\\ncurrent context: We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.<end_of_turn>\\nquestion:\\n\\n<start_of_turn>model\\n**Question:** What does current text discuss about Intellectual Property Rights related with company's achievements  and protection strategies?\\n\\n\\n **Answer**: The providedtext discusses how Company protects it IP assets through various measures like trademark registration,patent applications & enforcement actions.\"}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  warnings.warn(\n",
+      "100%|██████████| 1/1 [00:19<00:00, 19.77s/it]\n"
      ]
     }
    ],
@@ -359,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  11.796713590621948  seconds\n"
+      "execution time:  19.779096126556396  seconds\n"
      ]
     }
    ],
@@ -406,16 +372,16 @@
       " 'valuable. W e also continue to vigorously protect our intellectual property, '\n",
       " 'including trademarks, patents and trade secrets against third-party '\n",
       " 'infringement and misappropriation.\\n'\n",
-      " 'question:\\n'\n",
+      " \"**Question:** What does current text imply about company's IP protection \"\n",
+      " 'strategy regarding trademark registration or patent applications filed '\n",
+      " 'abroad\\n'\n",
       " '\\n'\n",
-      " '\\n'\n",
-      " '**Question:** What does current text discuss about Intellectual Property '\n",
-      " \"Rights related with company's achievements  and protection strategies?\\n\"\n",
-      " '\\n'\n",
-      " '\\n'\n",
-      " ' **Answer**: The providedtext discusses how Company protects it IP assets '\n",
-      " 'through various measures like trademark registration,patent applications & '\n",
-      " 'enforcement actions.')\n"
+      " 'Answer**: The providedtext implies  that Company has implemented an '\n",
+      " 'Intellectual Property Protection Strategy focused primarily around Trademark '\n",
+      " 'Registration/Patent Applications Filing Abroad. This includes filing '\n",
+      " 'relevant protections like Trademarks, Patents & Design Patent Rights across '\n",
+      " 'US& Select Foreign Countries along with vigorous enforcement measures aimed '\n",
+      " 'at safeguarding these assets from Infringement')\n"
      ]
     }
    ],
